Added functionality to the game

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <h1 class="main_title">Rock Paper Scissors</h1>
         <p class="main_text">Choose your move</p>
         <div class="moves">
-            <button class="rock">&#x1F44A;</button>
-            <button class="paper">&#x1F4C4;</button>
-            <button class="scissors">&#9986;</button>
+            <button class="rock" id="rock">&#9994;</button>
+            <button class="paper" id="paper">&#9995;</button>
+            <button class="scissors" id="scissors">&#9996;</button>
         </div>
         <p class="result">You Won!!!</p>
         <div class="score">
@@ -22,5 +22,7 @@
             <p class="score-text">Computer Score: <span class="score__computer">0</span></p>
         </div>
     </main>
+
+    <script src="index.js"></script>
 </body>
 </html>
