Added functionality to the game

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <button class="paper" id="paper">&#9995;</button>
             <button class="scissors" id="scissors">&#9996;</button>
         </div>
-        <p class="result">You Won!!!</p>
+        <p class="result"></p>
         <div class="score">
             <p class="score-text">Your Score: <span class="score__user">0</span></p>
             <p class="score-text">Computer Score: <span class="score__computer">0</span></p>
